:fire: roger favicon added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>theLaughTale</title>
+        <link rel="icon" href="roger_laugh.webp" type="Image/x-icon" />
+    <title>The Laugh Tale</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
-    <h2>Welcome to HumorHub</h2>
+    <h2>Welcome to Laught Tale (EoJ)</h2>
+<!--     Roger's End of Journey -->
     <section class="api_body"></section>
     <button id="fetchJoke">Get Another Joke</button>
 </div>
