--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
 <div class="container">
-    <h2>Welcome to Laught Tale (EoJ)</h2>
+    <h2>Welcome to The Laugh Tale</h2>
 <!--     Roger's End of Journey -->
     <section class="api_body"></section>
     <button id="fetchJoke">Get Another Joke</button>
 </div>
 
-<script src="joke.js"></script>
+<script src="joke.js">
+    console.log("The One Piece is REAL...☠️");
+</script>
 </body>
 </html>
