--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h2>Welcome to The Laugh Tale</h2>
-<!--     Roger's End of Journey -->
-    <section class="api_body"></section>
-    <button id="fetchJoke">Get Another Joke</button>
-</div>
-
-<script src="joke.js">
-    console.log("The One Piece is REAL...☠️");
-</script>
+    <video src="BG1.mp4" loop autoplay muted
+    style="position: fixed; right: 0; bottom: 0; min-width: 100%; min-height: 100%; z-index: -1;"
+    ></video>
+    <div class="container">
+        <h2>Welcome to The Laugh Tale</h2>
+    <!--     Roger's End of Journey -->
+        <section class="api_body"></section>
+        <button id="fetchJoke">Get Another Joke</button>
+    </div>
+    
+    <script src="joke.js">
+        console.log("The One Piece is REAL...☠️");
+    </script>
 </body>
 </html>
